[build-system]
requires = ['setuptools>=65.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'energym'
version = '0.1.0'
description = 'Gymnasium environment for simulating a prosumer energy node with battery energy storage system'
readme = 'README.md'
requires-python = '>=3.12'
license = {text = 'MIT'}
authors = [{name = 'Giovanni Geraci', email = 'giovanni.geraci2@unisi.it'}]
keywords = ['gymnasium', 'rl', 'energy', 'battery', 'simulation', 'storage', 'prosumer']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]

dependencies = [
    'gymnasium>=0.27.0',
    'pandas>=1.5.0',
    'numpy>=1.21.0',
    'holidays>=0.34',
]

[project.optional-dependencies]
dev = [
    'pytest>=7.0',
    'pytest-cov>=4.0',
    'ruff>=0.1.0',
    'mypy>=1.0',
]

[tool.setuptools]
packages = ['energym']

[tool.ruff]
target-version = 'py312'
line-length = 100
select = ['E', 'F', 'I', 'UP']
ignore = ['E501']

[tool.ruff.per-file-ignores]
'__init__.py' = ['F401']

[tool.mypy]
python_version = '3.12'
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
